app1-ingress/demo-http-apps-lseg.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-front1
  namespace: lseg
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app-selector-v1
  template:
    metadata:
      name: web-front1
      labels:
        app: app-selector-v1
    spec:
      containers:
        - name: web-front1
          image: tacobayle/busybox-v1
          command: [ "sh", "-c"]
          args:
            - while true; do
              echo -e "HTTP/1.1 200 OK\n\n$(date)\nApp version is $(printenv AppVersion)\nNode is $(printenv MY_NODE_NAME)\nPod is $(printenv MY_POD_NAME)\nNamespace is $(printenv MY_POD_NAMESPACE)\nPod IP is $(printenv MY_POD_IP)\nPod Service account is $(printenv MY_POD_SERVICE_ACCOUNT)" | nc -l -p 8080; done;
restartPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-front2
  namespace: lseg
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app-selector-v2
  template:
    metadata:
      name: web-front2
      labels:
        app: app-selector-v2
    spec:
      containers:
        - name: web-front2
          image: tacobayle/busybox-v2
          command: [ "sh", "-c"]
          args:
            - while true; do
              echo -e "HTTP/1.1 200 OK\n\n$(date)\nApp version is $(printenv AppVersion)\nNode is $(printenv MY_NODE_NAME)\nPod is $(printenv MY_POD_NAME)\nNamespace is $(printenv MY_POD_NAMESPACE)\nPod IP is $(printenv MY_POD_IP)\nPod Service account is $(printenv MY_POD_SERVICE_ACCOUNT)" | nc -l -p 8080; done;
restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: svc-v1
  namespace: lseg
spec:
  selector:
    app: app-selector-v1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: svc-v2
  namespace: lseg
spec:
  selector:
    app: app-selector-v2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
