app1-ingress/demo-http-ingress-lseg.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: lseg
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: svc-v1
                port:
                  number: 80
      host: v1.app.avi.com
    - http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: svc-v2
                port:
                  number: 80
      host: v2.app.avi.com
    - http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: svc-v3
                port:
                  number: 80
      host: v3.app.avi.com
